# project_lp_aed

./: CMakeLists.txt  lab.rar  main.c
libs/: client_string_sort.c  client_string_sort.h  lib_util.c  lib_util.h  strings_kmp.c  strings_kmp.h  stringsorting.c  stringsorting.h
project/: fase1.c  fase1.h  fase2.c  fase2.h  matrix.c  matrix.h  maze.c  maze.h
project/fase2/: words.c  words.h
recursos/: en_words.txt  matrix.txt  words.txt
